ops/cluster/E2E_networking/resources/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-plain-http
  labels:
    app: plain-http
spec:
  replicas: 1
  selector:
    matchLabels:
      app: plain-http
  template:
    metadata:
      labels:
        app: plain-http
    spec:
      containers:
      - name: nginx
        image: nginx:1.14.2
        ports:
        - containerPort: 80
