ops/cluster/E2E_networking/resources/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: plain-svc
spec:
  selector:
    app: plain-http
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
