ops/cluster/E2E_networking/resources/app-ingress-rule.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: plain-ingress
  namespace: ingress
spec:
  ingressClassName: public
  rules:
  - http:
      paths:
      - backend:
          service:
            name: plain-svc
            port:
              number: 80
        path: /
        pathType: Prefix
